test/sema/dereference-increment-expr.delta.output
dereference-increment-expr.delta:7:13: error: cannot dereference non-pointer type 'void'
    var b = *(a++);
            ^
dereference-increment-expr.delta:3:6: warning: unused declaration 'f'
void f(int[*] p) {
     ^
