test/sema/dereference-increment-expr.delta
// RUN: %check_errors %not %delta -typecheck %s

void f(int[*] p) {
    var a = p;

    // CHECK: [[@LINE+1]]:13: error: cannot dereference non-pointer type 'void'
    var b = *(a++);
}
